  - fix deadlock while quitting XCSoar
  - add U-BLOX 7 USB GPS into 'white list' of USB devices
* Kobo
  - display XCSoarData/kobo/poweroff.txt at the bottom
  - fix crash in waypoint dialog

Version 7.24 - 2022/07/22
* user interface
  - padding in fields
  - rework menu labels
  - increase popup message timeouts
  - fix missing wind arrow InfoBox updates
* file handling
  - guard against file corruption in poweroff situations
* FLARM
  - timeouts in flight downloads
* Linux
  - fix terrain renderer bug
  - allow changing the language at runtime
* OpenVario
  - menu: fix bogus clicks after returning from XCSoar
* Android
  - add SoftRF Lego into 'white list' of USB devices
  - disable background location again to go back to Google Play
* calculations
  - support for LVZC Charron contest
  - new asw27 polar from idaflieg
* Windows
  - new default fonts
  - use 6 devices in serial port list (like all other targets)
* XCVario/Borgelt
  - revert cruise/circling mode change
* Kobo
  - add ca certificates for https downloads

Version 7.23 - 2022/02/10
* user interface
  - add "Set Frequency" buttons to alternates list
  - revamped Credits dialog
  - put "Details" button to first position in map elements dialog
  - make "range" and "radial" in target dialog editable with keyboard
* support uploading IGC files to WeGlide
* Linux
  - fix command-line option "--datapath"
* Raspberry Pi / Cubieboard
  - probe both /dev/dri/card0 and /dev/dri/card1
  - reduce input lag
* Android
  - add SoftRF Academy and ES into 'white list' of USB devices
  - fix crash with empty SD card slot
* Kobo
  - fix broken button text background
  - add OTG support (serial, sound, net) for Clara HD
  - fix "Network failure" in Wifi dialog

Version 7.22 - 2022/01/14
* user interface
  - close the download dialog after successful download
  - add "Share" button to the status dialog
* glide computer
  - implement event "AIRSPACE_ENTER"
  - add event "AIRSPACE_NEAR"
* Polars
  - add DG-800S
* devices