@@ -216,6 +216,7 @@ Version 7.24 - 2022/07/22
   - increase popup message timeouts
   - fix missing wind arrow InfoBox updates
 * file handling
+  - FileManager: sort repository files (maps, airspaces etc) alphabetically
   - guard against file corruption in poweroff situations
 * FLARM
   - timeouts in flight downloads
